# gen3-user-data-library

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  _common_setup.sh  clean.sh  debug_run.py  dockerrun.bash  gunicorn.conf.py  pyproject.toml  run.py  run.sh  test.sh
.github/workflows/: ci.yml  integration_tests.yaml
config/: config.md  item_schemas.json
docs/: Troubleshooting.md  auth.md  config.md  future_considerations.md  openapi.yaml  questions.md  remaining_work.md  schemas.md  troubleshooting.md
docs/examples/config/: config.md
docs/routes/: example.md
gen3datalibrary/: __init__.py  auth.py  config.py  db.py  main.py  models.py  routes.py  utils.py
gen3userdatalibrary/: __init__.py  auth.py  config.py  db.py  main.py  metrics.py  models.py  routes.py  utils.py
gen3userdatalibrary/models/: data.py  helpers.py  items_schema.py  metrics.py  user_list.py
gen3userdatalibrary/routes/: __init__.py  basic.py  context_configurations.py  dependencies.py  injection_dependencies.py  lists.py  lists_by_id.py  maintenance.py  middleware.py  route_configurations.py
gen3userdatalibrary/services/: auth.py  db.py  dependencies.py  helpers.py
gen3userdatalibrary/services/helpers/: core.py  db.py  dependencies.py  error_handling.py  modeling.py
gen3userdatalibrary/services/utils/: modeling.py
gen3userdatalibrary/utils/: core.py  metrics.py  modeling.py
migrations/: env.py
migrations/versions/: 3c2cb76ce78c_initial_migration.py  3c2cb76ce78c_initial_user_lists_table.py  4c18bd2d556f_initial_user_lists_table.py
tests/: .env  ci_commands_script.sh  config_testing.py  conftest.py  helpers.py  import_definitions.py  test_auth.py  test_basic.py  test_config.py  test_configs.py  test_db.py  test_generator.py  test_lists.py  test_main.py  test_metrics.py  test_middleware.py  test_service_info.py  test_user_list.py  test_validation.py
tests/data/: example_lists.py
tests/examples/: examples.py  helpers_for_tests.py
tests/routes/: conftest.py  data.py  test_basic.py  test_core.py  test_dependencies.py  test_lists.py  test_lists_by_id.py
tests/services/: test_auth.py  test_dependencies.py  test_middleware.py
tests/utils/: test_auth.py  test_dependencies.py  test_middleware.py  test_modeling.py
