[tool.poetry]
name = "gen3userdatalibrary"
version = "1.0.0"
description = "Gen3 User Data Library Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "gen3userdatalibrary" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.10.dev0"

requests = ">=2.31.0"
fastapi = ">=0.97.0"
cdislogging = ">=1.1.1"
gunicorn = ">=20.1.0"
gen3authz = ">=2.1.0"
uvicorn = ">=0.27.0"
authutils = ">=6.2.5"
alembic = ">=1.13.2"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.31" }
asyncpg = ">=0.29.0"
prometheus-client = ">=0.20.0"
cdispyutils = { git = "https://github.com/uc-cdis/cdis-python-utils/", rev = "feat/common_metrics" }
cryptography = "43.0.1"
# NOTE:
# for testing with updated libaries as git repos:
# foobar = {git = "https://github.com/uc-cdis/some-repo", rev = "feat/test"}
httpx = "0.23.3"
pyyaml = ">=6.0.1"
pytest-asyncio = ">=0.23.8"


[tool.poetry.group.dev.dependencies]
# <8.0.0 is temporary, try removing. It was causing issues because the
# underlying pytest-* libraries hadn't updated yet to fix some breaking changes
pytest = ">=7.3.2,<8.0.0"
uvicorn = ">=0.22.0"
coverage = ">=7.3.2"
pytest-cov = ">=4.1.0"
isort = ">=5.12.0"
black = ">=23.10.0"
pylint = ">=3.0.1"
pytest-profiling = ">=1.7.0"
gen3 = "4.25.1"
drsclient = "0.2.3"
dictionaryutils = "3.4.10"
jsonschema = "3.2.0"
[tool.pytest.ini_options]
# Better default `pytest` command which adds coverage
#
# WARNING: overriding default `pytest` command to include all this coverage
#          may interfere with some debuggers (like PyCharm's), so it may not stop
#          on breakpoints. If you run into this issue, you can comment
#          the addopts out below and then run the pytest command with all these options
#          manually if you want to see coverage
#
# see .coveragerc for what the coverage omits
#addopts = """
#-vv --cov-config=.coveragerc
#--cov=gen3userdatalibrary
#--cov-report term-missing:skip-covered
#--cov-fail-under 90
#--cov-report html:_coverage
#--cov-branch
#--profile --profile-svg
#"""

[tool.isort]
known_first_party = ["gen3userdatalibrary"]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
